--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,6 +1,9 @@
+<%# Rails flash messages styled for Zurb Foundation %>
 <% flash.each do |name, msg| %>
   <% if msg.is_a?(String) %>
-    <%= content_tag :div, msg, :class => "flash_#{name}" %>
-    <!-- content_tag is a helper to create HTML div -->
+    <div data-alert class="alert-box round <%= name.to_s == 'notice' ? "success" : "alert" %>">
+      <%= content_tag :div, msg %>
+      <a href="#" class="close">&times;</a>
+    </div>
   <% end %>
 <% end %>
