--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,11 +1,12 @@
-<ul class="nav">
-  <li><%= link_to 'Home', root_path %></li>
-  <!-- link_to helper method -->
-  <!-- takes the anchor text and also the route -->
-  <!-- the root_path has been set in config/routes.rb -->
-
-  <%= render 'layouts/navigation_links' %>
-  <!-- partial being nested -->
-
-  
-</ul>
+<%# navigation styled for Zurb Foundation 4 %>
+<nav class="top-bar">
+  <ul class="title-area">
+    <li class="name"><%= link_to 'Home', root_path %></li>
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+  <div class="top-bar-section">
+    <ul>
+      <%= render 'layouts/navigation_links' %>
+    </ul>
+  </div>
+</nav>
